# IntelliX

./: .dockerignore  .gitignore  Dockerfile  HANDOFF.md  Makefile  README.md  SETUP.md  app.py  config.yaml  conftest.py  cpp_analyzer.py  cpp_profiler.cpp.txt  docker-compose.yml  flask_err.txt  flask_stdout.txt  gunicorn.conf.py  java_analyzer.py  java_profiler.java  mcp_server.py  profiler_main.py  pyproject.toml  requirements.txt  start.bat  test_app.py  test_profiler.py
.github/workflows/: ci.yml
benchmarks/: benchmark_validation.py  validation_report.json
benchmarks/cpp/: linear_sum.cpp  mod_check.cpp  naive_fib.cpp  quadratic_pairs.cpp  sort_n.cpp  sqrt_calc.cpp
benchmarks/java/: LinearSum.java  ModCheck.java  NaiveFib.java  QuadraticPairs.java  SortN.java  SqrtCalc.java
benchmarks/real_templates/: cpp_driver.py  java_driver.py  overflow_bug_report.md  python_driver.py  real_template_report.json  real_template_validation.py  selected_templates.py
static/: style.css
templates/: index.html  portfolio.html
